git-annex (4.20130828) UNRELEASED; urgency=low

  * forget: New command, causes git-annex branch history to be forgotten
    in a way that will spread to other clones of the repository.
    (As long as they're running this version or newer of git-annex.)
  * sync, assistant: Force push of the git-annex branch. Necessary
    to ensure it gets pushed to remotes after being rewritten by forget.

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Aug 2013 11:03:00 -0400

git-annex (4.20130827) unstable; urgency=low

  * Youtube support! (And 53 other video hosts). When quvi is installed,
    git-annex addurl automatically uses it to detect when an page is
    a video, and downloads the video file.
  * web special remote: Also support using quvi, for getting files,
    or checking if files exist in the web.
  * unused: Is now a minimum of 30 times faster, and typically many
    more times than that (when a repository has several branches).
    (Thanks, guilhem for the patch.)
  * unused: Fix bugs in two edge cases involving manually staged changes.
    (Thanks, guilhem for the patch.)
  * Android: Fix bug in terminal app that caused it to spin using much 
    CPU and battery. This problem was introduced in version 4.20130601.
  * sync, merge: Bug fix: Don't try to merge into master when in a bare repo.
  * import: Add options to control handling of duplicate files:
    --duplicate, --deduplicate, and --clean-duplicates
  * mirror: New command, makes two repositories contain the same set of files.
  * Set --clobber when running wget to ensure resuming works properly.
  * Unescape characters in 'file://...' URIs. (Thanks, guilhem for the patch.)
  * Better error message when trying to use a git remote that has annex.ignore
    set.
  * Fix bug that caused typechanged symlinks to be assumed to be unlocked
    files, so they were added to the annex by the pre-commit hook.
  * Debian: Run the builtin test suite as an autopkgtest.